# worklane

./: .env.example  .gitignore  AGENTS.md  BACKLOG.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  deny.toml  docker-compose.yml  justfile
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: rust.yml
crates/worklane/: Cargo.toml
crates/worklane-cli/: Cargo.toml  README.md
crates/worklane-cli/src/: broker.rs  main.rs
crates/worklane-cli/src/cmd/: classify.rs  dead_letters.rs  mod.rs  stats.rs
crates/worklane-cli/tests/: integration.rs
crates/worklane-core/: Cargo.toml  README.md
crates/worklane-core/src/: broker.rs  clock.rs  envelope.rs  error.rs  id.rs  job.rs  lane.rs  lib.rs  observer.rs  payload.rs  payload_store.rs  redact.rs  result_store.rs  retention.rs  retry.rs  spi.rs
crates/worklane-governance/: Cargo.toml
crates/worklane-governance/src/: main.rs
crates/worklane-memory/: Cargo.toml  README.md
crates/worklane-memory/src/: clock.rs  lib.rs
crates/worklane-memory/tests/: broker_contract.rs  configured_contract.rs
crates/worklane-metrics/: Cargo.toml  README.md
crates/worklane-metrics/src/: lib.rs
crates/worklane-otel/: Cargo.toml  README.md
crates/worklane-otel/src/: lib.rs
crates/worklane-postgres/: Cargo.toml  README.md
crates/worklane-postgres/src/: conn.rs  dead_letters.rs  ident.rs  jobs.rs  lib.rs  queries.rs  result_store.rs  schedules.rs  schema.rs
crates/worklane-postgres/tests/: batch_deadlock.rs  broker_contract.rs  configured_contract.rs  migration.rs  outbox.rs  restart.rs  result_store_contract.rs
crates/worklane-pubsub/: Cargo.toml  README.md
crates/worklane-pubsub/src/: lib.rs
crates/worklane-redis/: Cargo.toml  README.md
crates/worklane-redis/src/: lib.rs  result_store.rs  scripts.rs
crates/worklane-redis/tests/: broker_contract.rs  configured_contract.rs  lane_key_safety.rs  migration.rs  restart.rs  result_store_contract.rs
crates/worklane-scheduler/: Cargo.toml  README.md
crates/worklane-scheduler/src/: lib.rs
crates/worklane-scheduler/tests/: recurring.rs
crates/worklane-sqlite/: Cargo.toml  README.md
crates/worklane-sqlite/src/: conn.rs  dead_letters.rs  jobs.rs  lib.rs  result_store.rs  schedules.rs  schema.rs
crates/worklane-sqlite/tests/: broker_contract.rs  broker_contract_file.rs  configured_contract.rs  migration.rs  outbox.rs  pool_size.rs  restart.rs  result_store_contract.rs  result_store_shared.rs
crates/worklane-test/: Cargo.toml  README.md
crates/worklane-test/src/: clock.rs  harness.rs  lib.rs  result_store_scenarios.rs  scenarios.rs
crates/worklane-test/src/scenarios/: batch.rs  capabilities.rs  classify.rs  concurrent.rs  dead_letters.rs  defer.rs  job_id.rs  lifecycle.rs  mod.rs  pending.rs  poison.rs  priority.rs  requeue.rs  retention.rs  scheduled.rs  timed.rs  unique.rs
crates/worklane/examples/: basic.rs  broker_middleware.rs  core_loop_benchmark.rs
crates/worklane/src/: canvas.rs  claim_check.rs  client.rs  client_builder.rs  lib.rs  worker.rs  workflow.rs
crates/worklane/src/worker/: circuit_breaker.rs  config.rs  execution.rs  middleware.rs  mod.rs
crates/worklane/tests/: bounded_handler.rs  cancellation.rs  canvas.rs  chord_watcher.rs  circuit_breaker.rs  claim_check.rs  concurrency.rs  core_loop.rs  fan_in_watcher.rs  idle_backoff_and_resilience.rs  lane_partitioning.rs  middleware.rs  observer.rs  panic_isolation.rs  poll_loop.rs  scheduled.rs  shutdown_timeout.rs  unique.rs  workflow.rs
docs/: architecture.md  benchmarks.md  broker-conformance-matrix.md  custom-brokers.md  development-flow.md  known-limitations.md  lifecycle-semantics.md  release-checklist.md
docs/adr/: 0001-adopt-openspec.md  0002-cargo-workspace-monorepo.md  0003-broker-extend-lease.md
openspec/: config.yaml
openspec/changes/add-concurrent-worker/: design.md  proposal.md  tasks.md
openspec/changes/add-lane-partitioning/: design.md  proposal.md  tasks.md
openspec/changes/add-sqlite-broker/: design.md  tasks.md
openspec/changes/add-worker-poll-loop/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-12-core-loop/: proposal.md
openspec/changes/archive/2026-06-12-lease-receipts/: design.md  proposal.md
openspec/changes/archive/2026-06-13-establish-broker-contract/: design.md  proposal.md  tasks.md
openspec/changes/bounded-long-handler-support/: design.md  tasks.md
openspec/changes/clean-room-canvas-rename/: tasks.md
openspec/changes/cli-classify/: tasks.md
openspec/changes/core-loop/: design.md  tasks.md
openspec/changes/cross-broker-decision-dedup/: design.md  tasks.md
openspec/changes/decouple-handler-timeout/: design.md  proposal.md  tasks.md
openspec/changes/default-lease-single-source/: tasks.md
openspec/changes/establish-broker-contract/: tasks.md
openspec/changes/isolate-handler-panics/: tasks.md
openspec/changes/lease-receipts/: tasks.md
openspec/changes/postgres-enqueue-batch-unnest/: tasks.md
openspec/changes/redis-hotpath-script-cache/: tasks.md
openspec/changes/restart-durable-clock/: tasks.md
openspec/changes/verified-broker-extensibility/: design.md  tasks.md
openspec/specs/baseline-documentation/: spec.md
openspec/specs/broker/: spec.md
openspec/specs/broker-extensibility/: spec.md
openspec/specs/cli/: spec.md
openspec/specs/client/: spec.md
openspec/specs/clock-observability/: spec.md
openspec/specs/dead-letter-retention/: spec.md
openspec/specs/durable-result-stores/: spec.md
openspec/specs/job-model/: spec.md
openspec/specs/lane-identifier/: spec.md
openspec/specs/lane-registry/: spec.md
openspec/specs/metrics/: spec.md
openspec/specs/payload-store/: spec.md
openspec/specs/result-backend/: spec.md
openspec/specs/scheduler/: spec.md
openspec/specs/telemetry/: spec.md
openspec/specs/topic-routing/: spec.md
openspec/specs/worker/: spec.md
openspec/specs/workflow/: spec.md
openspec/specs/workflow-canvas/: spec.md
(+55 files in other folders)
