[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.0.1"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["tacticaldoll"]

[workspace.dependencies]
worklane-core = { path = "crates/worklane-core" }
worklane-memory = { path = "crates/worklane-memory" }
worklane-test = { path = "crates/worklane-test" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"
tracing = "0.1"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "time"] }
