[package]
name = "worklane-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Operator CLI for inspecting and maintaining worklane brokers"
readme = "README.md"

[[bin]]
name = "wl"
path = "src/main.rs"

[dependencies]
worklane-core.workspace = true
worklane-sqlite.workspace = true
worklane-postgres.workspace = true
worklane-redis.workspace = true
clap = { version = "4", features = ["derive", "env"] }
serde.workspace = true
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde_json.workspace = true

[dev-dependencies]
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
