[package]
name = "worklane-memory"
description = "In-memory broker for worklane, for development and tests."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
worklane-core = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
