[package]
name = "worklane-sqlite"
description = "SQLite-backed durable broker for worklane."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
worklane-core = { workspace = true }
async-trait = { workspace = true }
rusqlite = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
worklane-test = { workspace = true }
