[package]
name = "worklane-sqlite"
description = "SQLite-backed durable worklane broker for embedded and small services."
readme = "README.md"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
worklane-core = { workspace = true }
async-trait = { workspace = true }
rusqlite = { workspace = true }
r2d2 = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
async-trait = { workspace = true }
tokio = { workspace = true }
worklane-test = { workspace = true }
