[package]
name = "worklane-test"
description = "Conformance test suite for third-party worklane broker implementors."
readme = "README.md"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
worklane-core = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
