[package]
name = "worklane"
description = "Typed background jobs for Rust services."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
worklane-core = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
worklane-memory = { workspace = true }
worklane-test = { workspace = true }
tokio = { workspace = true, features = ["sync", "test-util"] }
serde = { workspace = true }
